# zetty

./: Cargo.toml  LICENSE-APACHE  README.md
src/: config.rs  lib.rs  main.rs
tests/: cli.rs
