[package]
name = "zetty"
version = "0.1.0"
description = "A command line tool to manage notes in a Zettelkasten"
authors = ["Luís Simas <luissimas@protonmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
confy = "0.6.1"
human-panic = "2.0.2"
inquire = "0.7.5"
serde = { version = "1.0.217", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
assert_cmd = "2.0.16"
